# rusty_3d_game

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/shader_src/: background.frag  background.vert  fragment_shader.frag  geometry_shader.geo  vertex_shader.vert
client/src/: config.rs  graphics.rs  lib.rs  main.rs  server_interface.rs  tick_time.rs
client/src/controls/: mod.rs  targets.rs  triggers.rs
client/src/graphics/: debug_graphics.rs  interpolate_world.rs  mod.rs  visual_world.rs
client/src/graphics/model_graphics/: mod.rs
client/src/menu/: mod.rs
client/src/server_interface/: local_server_interface.rs  mod.rs  remote_server_interface.rs
client/src/server_interface/remote_server_interface/: after_snapshot_state.rs  connected_state.rs  mod.rs  network.rs  socket.rs
client/src/server_interface/remote_server_interface/connected_state/: after_snapshot_state.rs  mod.rs  playing_state.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  socket.rs
shader_src/: background.frag  background.vert  vertex_shader.vert
shared/: Cargo.toml
shared/precalc_src/: precalc.py
shared/src/: consts.rs  lib.rs  online_distribution.rs  tick_time.rs  util.rs
shared/src/math/: fixed_point.rs  mod.rs  vec3.rs
shared/src/model/: mod.rs  player.rs
shared/src/net/: mod.rs  socket.rs
src/: consts.rs  main.rs
src/client/: config.rs  controls.rs  graphics.rs  mod.rs  server_interface.rs
src/client/controls/: mod.rs  push_button.rs  target.rs  targets.rs  triggers.rs
src/model/: mod.rs
src/shared/: mod.rs
src/world/: mod.rs
(+6 files in other folders)
